[package]
name = "neweden"
version = "0.3.3"
authors = ["David Soria Parra <dsp@experimentalworks.net>"]
edition = "2024"
license = 'MIT'
repository = 'https://github.com/dsp/neweden'
description = 'Library for system inforamtion, wayfinding and range queries in Eve Online'
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
postgres = ["diesel"]
search = ["tantivy"]
sqlite = ["rusqlite"]
rpc = []

[dependencies]
anyhow = "^1"
bon = "3"
diesel = { version = "2", optional = true, features = ["postgres"] }
itertools = "0.14"
pathfinding = "4"
rstar = "0.12"
rusqlite = { version = "0.37", optional = true }
tantivy = { version = "0.25", optional = true }
thiserror = "2"

[dev-dependencies]
criterion = "0.7"
